--- a/index.html
+++ b/index.html
@@ -3,10 +3,75 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World</title>
+    <title>Nirusaki Malaal - Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Hello, World!</h1>
-    <p>Welcome to your first HTML page 🚀</p>
+
+    <header>
+        <div class="container">
+            <h1>Nirusaki Malaal</h1>
+            <p>Software Developer | Tech Enthusiast | Open Source Contributor</p>
+        </div>
+    </header>
+
+    <nav>
+        <a href="#about">About Me</a>
+        <a href="#projects">Projects</a>
+        <a href="#contact">Contact</a>
+    </nav>
+
+    <div class="container">
+
+        <section id="about" class="section">
+            <h2>About Me</h2>
+            <p style="text-align: center; max-width: 700px; margin: 0 auto;">
+                Hello! I'm Nirusaki Malaal, a passionate software developer with a love for creating innovative and impactful solutions. My journey in technology has been driven by a curiosity to learn and a desire to build things that make a difference. I specialize in [mention your skills or technologies, e.g., web development, machine learning, etc.] and I'm always eager to take on new challenges.
+            </p>
+        </section>
+
+        <section id="projects" class="section">
+            <h2>My Projects</h2>
+            <p style="text-align:center; margin-bottom: 30px;">Here are some of the projects I've been working on. You can find more on my <a href="https://www.github.com/nirusaki-malaal" target="_blank" rel="noopener noreferrer">GitHub</a>.</p>
+            
+            <div class="project-grid">
+                <div class="project-card">
+                    <h3>Project Name 1</h3>
+                    <p>A brief and engaging description of your project. Talk about the problem it solves and the technologies you used.</p>
+                    <a href="[Link to your GitHub repository for this project]" target="_blank" rel="noopener noreferrer">View on GitHub &rarr;</a>
+                </div>
+
+                <div class="project-card">
+                    <h3>Project Name 2</h3>
+                    <p>A brief and engaging description of your project. Talk about the problem it solves and the technologies you used.</p>
+                    <a href="[Link to your GitHub repository for this project]" target="_blank" rel="noopener noreferrer">View on GitHub &rarr;</a>
+                </div>
+
+                <div class="project-card">
+                    <h3>Project Name 3</h3>
+                    <p>A brief and engaging description of your project. Talk about the problem it solves and the technologies you used.</p>
+                    <a href="[Link to your GitHub repository for this project]" target="_blank" rel="noopener noreferrer">View on GitHub &rarr;</a>
+                </div>
+                 </div>
+        </section>
+
+        <section id="contact" class="section">
+            <h2>Get In Touch</h2>
+            <p>
+                I'm always open to discussing new projects, creative ideas, or opportunities.
+                <br>
+                Feel free to reach out to me!
+            </p>
+            <p style="margin-top: 20px;">
+                <a href="mailto:[your-email@example.com]">your-email@example.com</a>
+            </p>
+        </section>
+
+    </div>
+
+    <footer>
+        <p>&copy; 2025 Nirusaki Malaal. All Rights Reserved.</p>
+    </footer>
+
 </body>
 </html>
