--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+<!DOCTYPE html> <!-- This is a comment -->
+
 <html lang="en" class="scroll-smooth">
 <head>
     <meta charset="UTF-8">
