Refactor HTML and enhance audio context handling
Updated HTML structure and improved sound playback logic.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html> <!-- This is a comment -->
-
+<!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
 <head>
     <meta charset="UTF-8">
@@ -314,22 +313,40 @@
                 <div class="grid grid-cols-2 md:grid-cols-4 gap-6 max-w-4xl mx-auto">
                     <!-- Skill Card 1: Python -->
                     <div class="bg-zinc-800 p-6 rounded-lg shadow-lg flex flex-col items-center justify-center text-center transition-all duration-300 hover:bg-zinc-700 hover:scale-105">
-                        <svg class="w-16 h-16 mb-4 text-blue-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4"></path></svg>
+                        <!-- Python Logo -->
+                        <svg class="w-16 h-16 mb-4" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M11.9999 15.6599C11.3999 15.6599 10.8699 15.8499 10.4399 16.1999C9.73989 16.7599 9.35989 17.5899 9.35989 18.5299V20.9999H11.9999V18.5299C11.9999 18.1799 12.1199 17.8599 12.3399 17.6399C12.5599 17.4199 12.8799 17.2999 13.2299 17.2999H14.6399C14.9899 17.2999 15.3099 17.4199 15.5299 17.6399C15.7499 17.8599 15.8699 18.1799 15.8699 18.5299V20.9999H18.4999V18.5299C18.4999 17.5899 18.1199 16.7599 17.4199 16.1999C16.9899 15.8499 16.4599 15.6599 15.8699 15.6599H11.9999Z" fill="#306998"/>
+                            <path d="M12.0001 8.34C12.6001 8.34 13.1301 8.15 13.5601 7.8C14.2601 7.24 14.6401 6.41 14.6401 5.47V3H12.0001V5.47C12.0001 5.82 11.8801 6.14 11.6601 6.36C11.4401 6.58 11.1201 6.7 10.7701 6.7H9.36011C9.01011 6.7 8.69011 6.58 8.47011 6.36C8.25011 6.14 8.13011 5.82 8.13011 5.47V3H5.50011V5.47C5.50011 6.41 5.88011 7.24 6.58011 7.8C7.01011 8.15 7.54011 8.34 8.13011 8.34H12.0001Z" fill="#FFD43B"/>
+                            <path d="M15.87 8.34H18.5V14.64C18.5 15.58 18.12 16.41 17.42 16.97C16.99 17.32 16.46 17.51 15.87 17.51V14.64C15.87 14.29 15.75 13.97 15.53 13.75C15.31 13.53 14.99 13.41 14.64 13.41H12V10.77H14.64C14.99 10.77 15.31 10.65 15.53 10.43C15.75 10.21 15.87 9.89 15.87 9.54V8.34Z" fill="#306998"/>
+                            <path d="M8.13011 15.66V17.51C7.54011 17.51 7.01011 17.32 6.58011 16.97C5.88011 16.41 5.50011 15.58 5.50011 14.64V8.34H8.13011V9.54C8.13011 9.89 8.25011 10.21 8.47011 10.43C8.69011 10.65 9.01011 10.77 9.36011 10.77H12.0001V13.41H9.36011C9.01011 13.41 8.69011 13.53 8.47011 13.75C8.25011 13.97 8.13011 14.29 8.13011 14.64V15.66Z" fill="#FFD43B"/>
+                        </svg>
                         <h3 class="text-xl font-bold">Python</h3>
                     </div>
                     <!-- Skill Card 2: C++ -->
                     <div class="bg-zinc-800 p-6 rounded-lg shadow-lg flex flex-col items-center justify-center text-center transition-all duration-300 hover:bg-zinc-700 hover:scale-105">
-                        <svg class="w-16 h-16 mb-4 text-blue-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4"></path></svg> <!-- Placeholder icon -->
+                         <!-- C++ Logo -->
+                        <svg class="w-16 h-16 mb-4 text-blue-500" viewBox="0 0 64 64" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M32,4C16.4,4,4,16.4,4,32s12.4,28,28,28s28-12.4,28-28S47.6,4,32,4z M32,57.1C18.2,57.1,7,46,7,32S18.2,6.9,32,6.9 S57.1,18.2,57.1,32S45.8,57.1,32,57.1z"/>
+                            <path d="M35.6,26.5c2.4,0,4.3,0.6,5.7,1.8c1.5,1.2,2.2,2.9,2.2,5.1c0,2.1-0.7,3.9-2.2,5.1c-1.5,1.2-3.4,1.8-5.7,1.8h-4.6V26.5 H35.6z M31,37.5h4.7c1.6,0,2.9-0.4,3.8-1.2c0.9-0.8,1.4-1.9,1.4-3.3c0-1.4-0.5-2.5-1.4-3.3c-0.9-0.8-2.2-1.2-3.8-1.2H31V37.5z" />
+                            <path d="M22,32.3h2.8v2.8h2.8v-2.8h2.8v-2.8h-2.8v-2.8h-2.8v2.8H22V32.3z"/>
+                            <path d="M47.1,32.3h2.8v2.8h2.8v-2.8h2.8v-2.8h-2.8v-2.8h-2.8v2.8h-2.8V32.3z"/>
+                        </svg>
                         <h3 class="text-xl font-bold">C++</h3>
                     </div>
                     <!-- Skill Card 3: Linux -->
                     <div class="bg-zinc-800 p-6 rounded-lg shadow-lg flex flex-col items-center justify-center text-center transition-all duration-300 hover:bg-zinc-700 hover:scale-105">
-                        <svg class="w-16 h-16 mb-4 text-yellow-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg> <!-- Placeholder icon -->
+                        <!-- Linux Terminal Icon -->
+                        <svg class="w-16 h-16 mb-4 text-gray-300" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 9l3 3-3 3m5 0h3M5 20h14a2 2 0 002-2V6a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"></path>
+                        </svg>
                         <h3 class="text-xl font-bold">Linux</h3>
                     </div>
                     <!-- Skill Card 4: Telegram Bots -->
                     <div class="bg-zinc-800 p-6 rounded-lg shadow-lg flex flex-col items-center justify-center text-center transition-all duration-300 hover:bg-zinc-700 hover:scale-105">
-                        <svg class="w-16 h-16 mb-4 text-blue-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z"></path></svg>
+                        <!-- Telegram Logo -->
+                        <svg class="w-16 h-16 mb-4 text-blue-400" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                           <path d="M9.78 18.65l.28-4.23 7.68-6.92c.34-.31-.07-.46-.52-.19L7.74 13.3 3.64 12c-.88-.25-.89-.86.2-1.3l15.97-6.16c.73-.33 1.43.18 1.15 1.3l-2.72 12.81c-.19.91-.74 1.13-1.5.71L12.6 16.3l-1.99 1.93c-.23.23-.42.42-.83.42z"/>
+                        </svg>
                         <h3 class="text-xl font-bold">Telegram Bots</h3>
                     </div>
                 </div>
@@ -401,20 +418,17 @@
             
             // Function to play sound
             function playIntroSound() {
-                if (typeof Tone !== 'undefined' && Tone.context.state !== 'running') {
-                    // Start the audio context on any user interaction
-                    Tone.start().then(() => {
-                        console.log("Audio context started.");
-                        triggerSound();
-                    }).catch(e => {
-                        console.warn("Tone.start() failed, will try again on click.", e);
-                    });
-                } else if (typeof Tone !== 'undefined') {
-                    triggerSound();
+                // FIX: Try to start context and play immediately, don't wait for promise
+                 if (typeof Tone !== 'undefined') {
+                    if (Tone.context.state !== 'running') {
+                        Tone.start().catch(e => console.warn("Tone.start() failed on initial try:", e)); // Try to start, don't wait
+                    }
+                    triggerSound(); // Trigger sound immediately
                 } else {
                     console.warn("Tone.js not defined when playIntroSound was called.");
                 }
             }
+
 
             function triggerSound() {
                 try {
@@ -432,15 +446,16 @@
 
                     // Play the sound
                     const now = Tone.now();
-                    thud.triggerAttackRelease("C1", "1n", now);
-                    chord.triggerAttackRelease(["G3", "C4"], "1n", now + 0.15);
+                    // Schedule sound slightly after animation starts to ensure context is ready
+                    thud.triggerAttackRelease("C1", "1n", now + 0.05); // Small delay
+                    chord.triggerAttackRelease(["G3", "C4"], "1n", now + 0.20); // Small delay
                 } catch (e) {
                     console.error("Error playing intro sound:", e);
                 }
             }
 
-            // Play sound as animation starts
-            playIntroSound();
+            // Play sound slightly after DOM content loaded to give Tone.js a moment
+            setTimeout(playIntroSound, 50); // Small delay before trying to play
 
             // Hide loader after animations
             loaderN.addEventListener('animationend', (e) => {
@@ -756,3 +771,4 @@
 
 </body>
 </html>
+
