--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" class="scroll-smooth">
 <head> 
     <!-- Character & Viewport -->
+    <meta name="google-site-verification" content="C00OA3PoEnRfihFR8FypLbQd29gd80sqcdBfs7FlpzA" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
